--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sama helps modern businesses responsibly repurpose their e-waste for educational usage by underserved women."
+      content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
