Updating the display name

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,26 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
     <title>Sama Digital Foundation</title>
+
+    <meta property="og:title" content="Sama Digital Foundation" />
+    <!-- <meta property="og:description" content="Helping businesses repurpose e-waste for education." /> -->
+    <!-- <meta property="og:image" content="%PUBLIC_URL%/logo.png" /> -->
+    <meta property="og:url" content="https://thesama.in" />
+    <meta property="og:type" content="website" />
+
+    <!-- Structured Data for SEO (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Sama Digital Foundation",
+        "url": "https://thesama.in",
+        "logo": "https://thesama.in/logo.png",
+        "description": "Sama Digital Foundation helps businesses responsibly repurpose e-waste for educational usage by underserved women."
+      }
+    </script>
+    <meta name="google-site-verification" content="8Dn1M5kX5nmO5DXCQzvMJL_K7M2wiz_QZLYvfncascM" />
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
